lib/src/compiler/tests/testdata/errors/142.out
error[E043]: include file not found
 --> line:1:1
  |
1 | include "unknown"
  | ^^^^^^^^^^^^^^^^^ `unknown` not found in any of the include directories